--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClinicSignupActivity"></activity>
+        <activity android:name=".WelcomeScreen"></activity>
+        <activity android:name=".ClinicSignupActivity" />
         <activity android:name=".PatientSignupActivity" />
         <activity android:name=".SelectRegistrationActivity" />
         <activity android:name=".MainActivity">
