--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WelcomeScreen"></activity>
+        <activity android:name=".EditServices"></activity>
+        <activity android:name=".addServiceAdminPage" />
+        <activity android:name=".AdminPage" />
+        <activity android:name=".WelcomeScreen" />
         <activity android:name=".ClinicSignupActivity" />
         <activity android:name=".PatientSignupActivity" />
         <activity android:name=".SelectRegistrationActivity" />
