--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditServices"></activity>
+        <activity android:name=".UpdateServiceAdminPage"></activity>
+        <activity android:name=".EditServices" />
         <activity android:name=".addServiceAdminPage" />
         <activity android:name=".AdminPage" />
         <activity android:name=".WelcomeScreen" />
